--- a/style.css
+++ b/style.css
@@ -271,17 +271,115 @@
 
 } */
 
+.book img{
+    height: 500px;
+    width: 1000px;
+    margin-left: 600px;
+    
+}
 .form{
     display: flex;
     gap: 50px;
     justify-content: center;
     margin-bottom: 100px;
     background-color: blue;
+    height: 300px;
+    width: 1000px;
+    margin-left: 600px;
+    padding-top: ;
+
+    padding-right20px: ;
+    
+}
+.form button{
+    padding: 10px;
+    border: none;
+    background-color: yellow;
+}
+.form label{
+    font-size: 150%;
+    color: white;
+    padding-top: 20px;
+}
+.form input{
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    padding-left: 5px;
+    padding-right: 10px;
 }
 .book-us{
     background-color: yellow;
-    
+    height: 300px;
+    width: 500px;
+    text-align: right;
+    font-size: 150%;
+    padding-right: 40px;
+    margin-right: 50px;
+
 }
+.photos{
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin-bottom: 400px;
+}
+.photoOne{
+    position:relative;
+     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/couple-making-plan-together-redecorate-house.jpg);
+     background-repeat: no-repeat;
+     color: white;
+     background-size: cover;
+     height: 100px;
+     position: relative;
+     height: 300px;
+     width: 500px;
+ padding-top: 00px;
+ text-align: star}
+ .photoOne p,h3{
+     text-align: left;
+     margin-top: 200px;
+     font-size: 130%;
+     padding-left: 40px;
+ }
+.photoTwo{
+   position:relative;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/couple-moving-into-new-house.jpg);
+    background-repeat: no-repeat;
+    color: white;
+    background-size: cover;
+    height: 100px;
+    position: relative;
+    height: 300px;
+    width: 600px;
+padding-top: 00px;
+text-align: star}
+.photoTwo p,h3{
+    text-align: left;
+    margin-top: 200px;
+    font-size: 130%;
+    padding-left: 40px;
+}
+.photoThree{
+    position:relative;
+     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/couple-making-plan-redecorate-house.jpg);
+     background-repeat: no-repeat;
+     color: white;
+     background-size: cover;
+     height: 100px;
+     position: relative;
+     height: 300px;
+     width: 500px;
+ padding-top: 00px;
+}
+ .photoThree p,h3{
+     text-align: left;
+     margin-top: 200px;
+     font-size: 130%;
+     padding-left: 40px;
+ }
+ 
+
 
 
 
@@ -362,4 +460,43 @@
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     border: none;
+}
+.discover-more{
+    background-color: yellow;
+    display: flex;
+    gap: 900px;
+    height: 250px;
+    width: 2000px;
+    justify-content:center ;
+    margin-left:300px;
+}
+.discover-more h3{
+    font-size:200%;
+    color: white;
+}
+.discover-more button{
+    background-color: black;
+    color: white;
+    font-size: 120%;
+    padding: 30px;
+    margin-top: 160px;
+}
+.footer-info{
+    display: flex;
+    background-color: black;
+    color: white;
+    height: 300px;
+    width: 2000px;
+    margin-left: 300px;
+    gap: 300px;
+    text-align: center;
+    justify-content: center;
+    
+}
+.footer-info p h6{
+    font-size: 200%;
+    margin-left: 300px;
+    text-align: center;
+    padding-top: 100px;
+    
 }
