--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 1000px;
-    background-image: url("images/pexels-ketut-subiyanto-4246062.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/happy-african-american-young-family-bought-new-house.jpg);
     background-size: cover;
     background-size: 100% 100%;
     color: white;
@@ -16,6 +16,7 @@
     font-weight: bold;
     padding: 10px;
     line-height: ;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/happy-african-american-young-family-bought-new-house.jpg);
     
 }
 .contact-details{
