--- a/style.css
+++ b/style.css
@@ -1,260 +1,364 @@
 .container {
-    position: relative;
+    /* position: relative;
     width: 100%;
     height: 1000px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/happy-african-american-young-family-bought-new-house.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(i);
     background-size: cover;
     background-size: 100% 100%;
     color: white;
     text-align: center;
-    line-height: 310px;
+    line-height: 310px; */
 }
 
-.text {
-    background-color: rgba(0, 0, 0, 0.5);
-    font-size: ;
-    font-weight: bold;
-    padding: 10px;
-    line-height: ;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/happy-african-american-young-family-bought-new-house.jpg);
-    
+.text-main {
+    position: relative;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/happy-african-american-young-family-bought-new-house.jpg);
+    background-repeat: no-repeat;
+    color: white;
+    background-size: cover;
+    height: 100px;
+    position: relative;
+    height: 1000px;
+    width: 100%;
+    text-align: center;
 }
-.contact-details{
+
+
+.contact-details {
     display: flex;
     gap: 1300px;
     font-size: 170%;
     justify-content: center;
     margin-bottom: 50px;
 }
-.text2{
+
+#icon-one {
+    height: 50px;
+    width: 50px;
+    padding-top: 300px;
+
+}
+
+.text-main p {
+    font-size: 200%;
+
+}
+
+.text-main h1 {
+    font-size: 600%;
+
+}
+
+.text2 {
     font-size: 200%;
     line-height: 1.7;
 }
-.riaad-main{
+
+.riaad-main {
     display: flex;
 }
-#logo-one{
+
+.logos {
+    justify-content: center;
+    gap: 140px;
+    margin-left: 150px;
+    margin-bottom: 100px;
+}
+
+#logo-one {
     font-size: 20px;
 }
-#logo-two{
+
+#logo-two {
     font-size: 20px;
 }
-#logo-three{
+
+#logo-three {
     font-size: 20px;
 }
-#logo-four{
+
+#logo-four {
     font-size: 20px;
 }
-#logo-five{
+
+#logo-five {
     font-size: 20px;
 }
-.logos{
+
+.logos {
     display: flex;
 }
-.Navigation-bar{
+
+.navigation-bar {
     font-size: 120%;
     justify-content: center;
     gap: 550px;
-    margin-left: 400px;
+    margin-left: 500px;
     margin-bottom: 50px;
 
 }
-#home{
+
+#home {
     text-decoration: none;
     padding: 50px;
     color: grey;
 }
-.sectionThree{
+
+.section-three {
     display: flex;
-    margin-left: 200px;
+    margin-left: 300px;
     margin-top: 250px;
+    margin-bottom: 100px;
 
 }
-.sectionThree img{
+
+.sectionThree img {
     height: 400px;
     width: 300px;
 }
-.learnAbout{
+
+.learn-about {
     font-size: 150%;
     text-align: center;
-    
+    margin-left: 100px;
+
 }
-#learnAbout{
+
+#learn-about {
     text-decoration: underline;
     color: yellow;
     font-size: 90%;
 }
-.learnAbout img{
+
+.learn-about img {
     height: 500px;
     width: 600px;
 }
-.riaad{
+
+.learn-about h1 {
+    font-size: 200%;
+    margin-left: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.learn-about p {
+    text-align: left;
+    padding-left: 90px;
+}
+
+#rectangle-icon {
+
+    position: absolute;
+    width: 750px;
+    height: 700px;
+    padding-bottom: 100px;
+    margin-bottom: 100px;
+    margin-bottom: 100px;
+
+}
+
+.riaad {
     display: fle;
     margin-left: 70px;
+    height: 100p;
 }
-.riaad-main{
+
+.riaad-main {
     font-size: 130%;
     gap: 110px;
     margin-left: 60px;
 
 }
-.riaad img{
-    height: 500px;
-    width: 600px;
-    margin-left: 50px;
-    margin-bottom: 80px;
-    
+
+.riaad img {
+    height: 400px;
+    width: 500px;
+    margin-left: 150px;
+    margin-bottom: 100px;
+    margin-top: 150px;
+
 }
-#riaad-since{
+
+#riaad-since {
     font-size: 80%;
     color: yellow;
     text-decoration: underline;
 }
-.riaad-main h4{
+
+.riaad-main h4 {
     font-size: 160%;
 }
-#riaad-lastContainer{
+
+#riaad-last {
     font-size: 100%;
 }
-.logos{
-    justify-content: center;
-    gap: 140px;
-    margin-left: 220px;
-    margin-bottom: 100px;
-}
 
-.OurServices{
+.our-services {
     text-align: center;
     font-size: 180%;
 }
-.OurServices p{
+
+.our-services p {
     font-size: 75%;
     text-decoration: underline;
     color: yellow;
 }
-.services{
+
+.services {
     display: flex;
     justify-content: center;
     gap: 30px;
-    width: ;
+
     text-align: center;
     margin-bottom: 100px;
-    
-   
+
+
 }
-#packingIcon{
+
+#packingIcon {
     background-color: yellow;
-    width:20%;
-    height:20%;
+    width: 20%;
+    height: 20%;
     border-radius: 50px;
     padding: 15px;
     font-size: 50px;
 }
-#storage-div{
+
+#storage-div {
     background-color: blue;
 }
-#storageIcon{
-    background-color:white;
-    width:20%;
-    height:20%;
+
+#storageIcon {
+    background-color: white;
+    width: 20%;
+    height: 20%;
     border-radius: 50px;
     padding: 20px;
 }
-#transportIcon{
+
+#transportIcon {
     background-color: yellow;
-    width:20%;
-    height:20%;
+    width: 20%;
+    height: 20%;
     border-radius: 50px;
     padding: 20px;
 }
-#insuaranceIcon{
+
+#insuaranceIcon {
     background-color: yellow;
-    width:20%;
-    height:20%;
+    width: 20%;
+    height: 20%;
     border-radius: 50px;
     padding: 20px;
-    
+
 
 }
-.services h4{
+
+.services h4 {
     font-size: 130%;
 }
-.services h6{
+
+.services h6 {
     font-size: 90%;
     color: yellow;
     text-decoration: underline;
 
 }
-.services p{
+
+.services p {
     font-size: 110%;
 }
-.client{
-    font-size: ;
+
+.client {
+
     display: flex;
     justify-content: center;
 }
-.choose-Container-one{
+
+.choose-container-one {
     background-color: blue;
     height: 700px;
     width: 650px;
 }
-.riaad-choose img{
+
+.riaad-choose img {
     height: 600px;
     width: 550px;
 }
-.overlay-one{
+
+.overlay-one {
     background-color: white;
     font-size: 150%;
     height: 140px;
     width: 250px;
     position: absolute;
     overflow: visible;
-    padding-bottom: ;
+
     text-align: center;
     margin-left: 20px;
     margin-top: 80px;
     text-align: center;
     padding-top: 20px;
 }
-.four{
+
+.four {
     display: flex;
     margin-bottom: 100px;
     justify-content: center;
 }
-.whyChoose{
+
+.why-choose {
     margin-left: 150px;
-    margin-top: 50px;
+    margin-top: 1px;
 
 }
-.whyChoose p{
+
+.why-choose p {
     font-size: 90%;
     color: yellow;
     text-decoration: underlin
 }
-.whyChoose h6{
-    font-size: 100;
+
+.why-choose h6 {
     line-height: 1.8;
 }
-.whyChoose h4{
+
+.why-choose h4 {
     font-size: 150%;
     line-height: 2.0;
 }
-.whyChoose h4 i{
+
+.why-choose h2 {
+    font-size: 200%;
+
+}
+
+.why-choose h4 i {
     background-color: yellow;
     margin-right: 50px;
     padding: 20px;
     border-radius: 30px;
 }
-.whyChoose h3{
-    font-size: 190%;
-   
+
+.why-choose h3 {
+    font-size: 200%;
+
+
 }
-#questions{
+
+#choose-contact {
+    text-align: center;
+    font-size: 150%;
+
+}
+
+#questions {
     font-size: 120%;
     margin-top: 30px;
     margin-left: 20px;
     color: white;
 }
+
 /* .overlay-one p{
     font-size: 80%;
     color: yellow;
@@ -272,13 +376,15 @@
 
 } */
 
-.book img{
+.play-icon img {
     height: 500px;
     width: 1000px;
-    margin-left: 600px;
-    
+    margin-left: 580px;
+    margin-top: 100px;
+
 }
-.form{
+
+.form {
     display: flex;
     gap: 50px;
     justify-content: center;
@@ -287,29 +393,31 @@
     height: 300px;
     width: 1000px;
     margin-left: 600px;
-    padding-top: ;
 
-    padding-right20px: ;
-    
+
 }
-.form button{
+
+.form button {
     padding: 10px;
     border: none;
     background-color: yellow;
 }
-.form label{
+
+.form label {
     font-size: 150%;
     color: white;
     padding-top: 20px;
 }
-.form input{
+
+.form input {
     padding: 10px;
     border: none;
     border-radius: 10px;
     padding-left: 5px;
     padding-right: 10px;
 }
-.book-us{
+
+.book-us {
     background-color: yellow;
     height: 300px;
     width: 500px;
@@ -319,33 +427,39 @@
     margin-right: 50px;
 
 }
-.photos{
+
+.photos {
     display: flex;
     justify-content: center;
     gap: 100px;
     margin-bottom: 400px;
 }
-.photoOne{
-    position:relative;
-     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/couple-making-plan-together-redecorate-house.jpg);
-     background-repeat: no-repeat;
-     color: white;
-     background-size: cover;
-     height: 100px;
-     position: relative;
-     height: 300px;
-     width: 500px;
- padding-top: 00px;
- text-align: star}
- .photoOne p,h3{
-     text-align: left;
-     margin-top: 200px;
-     font-size: 130%;
-     padding-left: 40px;
- }
-.photoTwo{
-   position:relative;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/couple-moving-into-new-house.jpg);
+
+.photo-one {
+    position: relative;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/couple-making-plan-together-redecorate-house.jpg);
+    background-repeat: no-repeat;
+    color: white;
+    background-size: cover;
+    height: 100px;
+    position: relative;
+    height: 300px;
+    width: 500px;
+    padding-top: 00px;
+    text-align: star
+}
+
+.photo-one p,
+h3 {
+    text-align: left;
+    margin-top: 200px;
+    font-size: 130%;
+    padding-left: 40px;
+}
+
+.photo-two {
+    position: relative;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/couple-moving-into-new-house.jpg);
     background-repeat: no-repeat;
     color: white;
     background-size: cover;
@@ -353,33 +467,38 @@
     position: relative;
     height: 300px;
     width: 600px;
-padding-top: 00px;
-text-align: star}
-.photoTwo p,h3{
+    padding-top: 00px;
+    text-align: star
+}
+
+.photo-two p,
+h3 {
     text-align: left;
     margin-top: 200px;
     font-size: 130%;
     padding-left: 40px;
 }
-.photoThree{
-    position:relative;
-     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/couple-making-plan-redecorate-house.jpg);
-     background-repeat: no-repeat;
-     color: white;
-     background-size: cover;
-     height: 100px;
-     position: relative;
-     height: 300px;
-     width: 500px;
- padding-top: 00px;
+
+.photo-three {
+    position: relative;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/couple-making-plan-redecorate-house.jpg);
+    background-repeat: no-repeat;
+    color: white;
+    background-size: cover;
+    height: 100px;
+    position: relative;
+    height: 300px;
+    width: 500px;
+    padding-top: 00px;
 }
- .photoThree p,h3{
-     text-align: left;
-     margin-top: 200px;
-     font-size: 130%;
-     padding-left: 40px;
- }
- 
+
+.photo-three p,
+h3 {
+    text-align: left;
+    margin-top: 200px;
+    font-size: 130%;
+    padding-left: 40px;
+}
 
 
 
@@ -389,72 +508,85 @@ text-align: star}
 
 
 
-.headingTestimonials{
+
+.heading-testimonials {
     justify-content: center;
     font-size: 200%;
     text-align: center;
     margin-bottom: 150px;
 }
-.testimonials{
+
+.testimonials {
     display: flex;
     justify-content: center;
     gap: 150px;
     margin-bottom: 150px;
 }
-.testimonials i{
+
+.testimonials i {
     margin-left: 100px;
     font-size: 50px;
-    color:white;
+    color: white;
     background-color: blue;
     padding: 20px;
     border-radius: 30px;
-   
+
 
 }
-.testimonials p{
+
+.testimonials p {
     font-size: 120%;
     text-align: center;
 }
-.newsletter{
+
+.newsletter {
     text-align: center;
     margin-bottom: 100px;
 
 }
-.newsletter p{
+
+.newsletter p {
     font-size: 120%;
     color: yellow;
     text-decoration: underline;
 }
-.newsletter h2{
+
+.newsletter h2 {
     font-size: 290%;
-    
+
 }
-.blogHeading{
+
+.blog-heading {
     text-align: center;
 }
-.blogHeading p{
+
+.blog-heading p {
     font-size: 120%;
     color: yellow;
     text-decoration: underline;
 
 }
-.blogHeading h2{
+
+.blog-heading h2 {
     font-size: 250%;
 }
 
-.news{
+.news {
     display: fle;
 }
-#submitEmail{
+
+#submit-email {
     display: flex;
     justify-content: center;
     gap: 200px;
     margin-bottom: 150px;
 }
-#submitEmail p{
+
+#submit-email p {
     font-size: 140%;
 }
-#submitEmail button{
+
+#submit-email button {
     font-size: 120%;
     padding: 20px;
     background-color: yellow;
@@ -462,42 +594,49 @@ text-align: star}
     font-family: Arial, Helvetica, sans-serif;
     border: none;
 }
-.discover-more{
+
+.discover-more {
     background-color: yellow;
     display: flex;
     gap: 900px;
     height: 250px;
     width: 2000px;
-    justify-content:center ;
-    margin-left:300px;
+    justify-content: center;
+    margin-left: 150px;
+    margin-right: 100px;
 }
-.discover-more h3{
-    font-size:200%;
+
+.discover-more h3 {
+    font-size: 200%;
     color: white;
 }
-.discover-more button{
+
+.discover-more button {
     background-color: black;
     color: white;
     font-size: 120%;
     padding: 30px;
     margin-top: 160px;
 }
-.footer-info{
+
+.footer-info {
     display: flex;
     background-color: black;
     color: white;
     height: 300px;
     width: 2000px;
-    margin-left: 300px;
+    margin-left: 150px;
+    margin-right: 100px;
     gap: 300px;
     text-align: center;
     justify-content: center;
-    
+
 }
-.footer-info p h6{
+
+.footer-info p h6 {
     font-size: 200%;
     margin-left: 300px;
     text-align: center;
     padding-top: 100px;
-    
+
 }
